[package]
name = "gouth"
version = "0.2.1"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2018"
license = "MIT"
description = "This library provides auto-renewed tokens for GCP service authentication."
repository = "https://github.com/mechiru/gouth"
documentation = "https://docs.rs/gouth"
categories = ["authentication"]
keywords = ["google", "cloud", "auth", "gcloud", "gcp"]
readme = "./../README.md"

[dependencies]
async-trait = "0.1.80"
surf = "2.3.2"
gcemeta = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
url = { version = "2.2" }
jsonwebtoken = { version = "7" }
tonic = { version = "0.4", default-features = false, optional = true }
futures = "0.3"

[dev-dependencies]
lazy_static = "1.4"
rouille = "3.0"
tokio = { version = "1.27", features = ["full"] }

[features]
default = []
tonic-intercept = ["tonic"]
